# exostra

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  autoformat.sh  cp-arduino.sh  exostra.code-workspace  library.json  platformio.ini  sdkconfig.adafruit_qualia_s3_rgb666  sdkconfig.defaults  sdkconfig.pros3  sdkconfig.pros3.old  sdkconfig.um_feathers3  twm.code-workspace
.reuse/: dep5
LICENSES/: MIT.txt
include/: Thumby_WM.h  aremmell_um.h  esp32_qualia.h  exostra.h  gfx_driver.hh  platform.hh  primitives.hh  twm.h  twm.hh
main/: CMakeLists.txt  main.cpp  twm.cpp
src/: main.cpp
